...
                return "Female"
            default:
                return "Male"
            }
        }
    }
    var registrationView: RegistrationView {
        get {
            return self.view as! RegistrationView
        }
    }
    private let presenter: RegistrationViewOutput
    
...
